<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@id/groupUpdate">
        <item
            android:id="@id/menu_update"
            android:orderInCategory="1"
            android:title="@string/menu_check_update" />
    </group>
    <group
        android:id="@id/groupHide">
        <item
            android:id="@id/menu_hide"
            android:orderInCategory="2"
            android:title="@string/menu_hide_icon" />
    </group>
    <group
        android:id="@id/groupHideRoot">
        <item
            android:id="@id/menu_hide_root"
            android:orderInCategory="3"
            android:title="@string/menu_hide_icon" />
    </group>
    <group
        android:id="@id/groupMain">
        <item
            android:id="@id/menu_pin_protect"
            android:orderInCategory="4"
            android:title="@string/menu_enable_pin_protection" />
        <item
            android:id="@id/menu_change_pin"
            android:orderInCategory="4"
            android:title="@string/menu_change_pin" />
        <item
            android:id="@id/menu_change_email"
            android:orderInCategory="5"
            android:title="@string/menu_change_email" />
    </group>
    <group
        android:id="@id/groupPermissions">
        <item
            android:id="@id/menu_check_permissions"
            android:orderInCategory="6"
            android:title="@string/menu_check_app_state" />
        <item
            android:id="@id/menu_reset_permissions"
            android:orderInCategory="6"
            android:title="@string/menu_reset_app_perm" />
        <item
            android:id="@id/menu_select_source"
            android:orderInCategory="6"
            android:title="@string/menu_select_source" />
    </group>
    <group
        android:id="@id/groupUninstall">
        <item
            android:id="@id/menu_uninst"
            android:orderInCategory="7"
            android:title="@string/menu_uninstall" />
    </group>
    <group
        android:id="@id/groupClose">
        <item
            android:id="@id/menu_close"
            android:orderInCategory="8"
            android:title="@string/menu_close" />
    </group>
</menu>