<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@id/frameLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@id/imageGradient"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:src="@drawable/status_bar_gradient"
        android:scaleType="fitXY"
        android:contentDescription="@string/img_empty_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="100.0" />
    <ImageView
        android:id="@id/imageHWLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.0dip"
        android:src="@drawable/logo"
        android:contentDescription="@string/img_logo_caption"
        android:alpha="0.8"
        android:layout_marginStart="8.0dip"
        android:layout_marginEnd="8.0dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="22.0sp"
        android:gravity="center_horizontal"
        android:id="@id/textView"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.0dip"
        android:text="@string/inst_license_caption"
        android:textAlignment="center"
        android:layout_marginStart="16.0dip"
        android:layout_marginEnd="16.0dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageHWLabel" />
    <ScrollView
        android:id="@id/scrollView2"
        android:layout_width="0.0dip"
        android:layout_height="0.0dip"
        android:layout_marginTop="16.0dip"
        android:layout_marginBottom="8.0dip"
        android:layout_marginStart="16.0dip"
        android:layout_marginEnd="16.0dip"
        app:layout_constraintBottom_toTopOf="@id/cbAccept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/textView4"
            android:scrollbars="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_text"
            android:isScrollContainer="true"
            style="@style/BaseTextStyle" />
    </ScrollView>
    <CheckBox
        android:textSize="18.0sp"
        android:gravity="top"
        android:id="@id/cbAccept"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16.0dip"
        android:text="@string/license_read"
        android:textAlignment="gravity"
        android:layout_marginStart="16.0dip"
        android:layout_marginEnd="16.0dip"
        app:layout_constraintBottom_toTopOf="@id/NextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/BaseTextStyle" />
    <Button
        android:textColor="@color/button_text_color"
        android:id="@id/NextButton"
        android:background="@drawable/rounded_button"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8.0dip"
        android:text="@string/license_accept"
        android:fontFamily="@font/muli"
        android:layout_marginStart="16.0dip"
        android:layout_marginEnd="16.0dip"
        app:layout_constraintBottom_toTopOf="@id/txtCancelInstall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="350.0dip" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@id/txtCancelInstall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16.0dip"
        android:text="@string/inst_hello_cancel"
        android:layout_marginStart="16.0dip"
        android:layout_marginEnd="16.0dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/BaseTextStyle" />
</androidx.constraintlayout.widget.ConstraintLayout>